[package]
description = "🪪 Session-based user authentication for Axum."
documentation = "https://docs.rs/axum-login"
edition = "2021"
homepage = "https://github.com/maxcountryman/axum-login"
license = "MIT"
name = "axum_login_tests"
publish = false
repository = "https://github.com/maxcountryman/axum-login"
version = "0.4.1"

[dependencies]
axum-login = {path = "../axum-login", features = [
  "sqlx",
  "mssql",
  "mysql",
  "postgres",
  "sqlite",
]}
sqlx = {version = ">=0.6"}

[features]
mysql = ["axum-login/mysql"]
postgres = ["axum-login/postgres"]
sqlite = ["axum-login/sqlite"]
sqlx = ["axum-login/sqlx"]

# not supported by [sqlx::test]
# https://github.com/launchbadge/sqlx/discussions/1616
# mssql = ["axum-login/mssql"]

[[test]]
harness = true
name = "integration_tests"
path = "tests/lib.rs"
